...
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="32"/>
                                        <segments>
                                            <segment title="Log in"/>
                                            <segment title="Sign up"/>
                                        </segments>
                                        <connections>
...
                                        <rect key="frame" x="0.0" y="62" width="300" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QrA-Rp-hXm">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="175" width="300" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCN-7v-p6m">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="288" width="300" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYw-p6-mgu">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bu-hT-beg">
                                <rect key="frame" x="181" y="534" width="52" height="30"/>
                                <state key="normal" title="Log out"/>
                                <connections>
                                    <action selector="logOutPressed:" destination="A59-Nh-LF7" eventType="touchUpInside" id="anM-om-YXQ"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="profileTabBar" springLoaded="YES" id="Ozm-TJ-2gi"/>
                    <navigationItem key="navigationItem" id="9bW-gx-ISQ"/>
                    <connections>
...
                                <rect key="frame" x="20" y="140" width="374" height="722"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CALCULATE YOUR BMI" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWy-sN-9fq">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="384"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Proceed">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
