...
                Text(settingsData.user.full_name)
                    .font(.title)
                    .fontWeight(.bold)
                    .foregroundColor(.white)
                
                Button(action: {settingsData.updateDetails(field: "name")}) {
                    Image(systemName: "pencil.circle.fill")
                        .font(.system(size: 24))
                        .foregroundColor(.white)
                }
            }
            
            HStack(spacing: 15){
...
